cors/envoy-cors.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: www
              domains:
              - "*"
              cors:
                allow_origin: ["envoyproxy.io"]
                allow_methods: "GET"
              routes:
              - match:
                  prefix: "/cors/restricted"
                route:
                  cluster: backend_service
              - match:
                  prefix: "/cors/open"
                route:
                  cluster: backend_service
                  cors:
                    allow_origin: ["*"]
                    allow_methods: "GET"
              - match:
                  prefix: "/"
                route:
                  cluster: backend_service
          http_filters:
          - name: envoy.cors
            typed_config: {}
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: backend_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: backend_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api
                port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
